--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "stripe": "^12.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
