--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.15.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
+    "lodash.groupby": "^4.6.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "stripe": "^12.3.0"
